# ucfwealth

./: .env.aidbox.tpl  .env.app.tpl  .env.tpl  .gitignore  .gitmodules  Dockerfile  README.md  compose.yaml  docker-compose.dev.yaml  docker-compose.yaml
.github/workflows/: aidbox.yaml  app.yaml  main.yaml
env/: aidbox  aidbox-2fa  sdc  ucf-app
infra/cluster/: cluster.yaml  deploy_user.yaml
infra/deploy/: ansible-vault.sh
infra/deploy/aidbox/: configuration.yaml  kustomization.yaml
infra/deploy/app/: configuration.yaml  kustomization.yaml
infra/deploy/postgres/: configuration.yaml  kustomization.yaml  postgresql.conf
infra/deploy/sdc/: configuration.yaml  kustomization.yaml
infra/deploy/ucfwealth/: deploy.yaml  ingress.yaml  kustomization.yaml  secret.yaml
kubernetes-init-scripts/scripts/: defaults.sh  init-aidbox.sh  init-app.sh  init-backup.sh  init-bucket.sh
resources/seeds/AccessPolicy/: anonymous.yaml  patient.yaml  twofawebhook.yaml
resources/seeds/Mapping/: forgot-password-extract.yaml  patient-create-extract.yaml  patient-edit-extract.yaml  patient-extract.yaml  set-password-extract.yaml
ucf-app/: Dockerfile  pyproject.toml
ucf-app/app/: fhirdate.py  main.py
ucf-app/app/aidbox/: __init__.py  notification.py  sdk.py  settings.py  subscriptions.py  two_factor.py  utils.py
ucf-app/app/auth/: __init__.py  operations.py  utils.py
ucf-app/app/config/: __init__.py  aidbox.py  emr.py
zenproject/zrc/: box.edn  system.edn
zrc/: box.edn  package-lock.json  package.json
zrc/fhir-ichom-breast-cancer-ig/: fhir-ichom-breast-cancer-ig.edn
(+134 files in other folders)
