[tool.poetry]
name = "aidbox_2fa"
version = "0.1.0"
description = "Aidbox app"
authors = ["beda.software <info@beda.software>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.8.4"
gunicorn = "^20.1.0"
fhirpy = "^1.3.1"
aidbox-python-sdk = "^0.1.8"
pyotp = "^2.9.0"
jinja2 = "^3.1.4"
premailer = "^3.10.0"
